add a thank you to nftexplorer for the data

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 					<header>	
 						<h2>Algorillas NFT Sales Statistics</h2>
 					</header>
+					<p>Sales data generated for free by the amazing team at <a href="https://www.nftexplorer.app/">nftexplorer</a>. <br>Analysis of sales data done by <a href="https://twitter.com/thecryptomie">thecryptomie</a>. <br> Last updated on April 30th, 2022.</p>
 				</section>
 
 				<!-- 
