update header row in trait data

--- a/index.html
+++ b/index.html
@@ -568,11 +568,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Space</td>
@@ -678,11 +678,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Red</td>
@@ -858,11 +858,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Gold</td>
@@ -905,11 +905,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Yellow</td>
@@ -973,11 +973,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>HatOrnateHelmetClosedSilverGold</td>
@@ -1454,11 +1454,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>ShirtFlamingoPatternRed</td>
@@ -1872,11 +1872,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>EgyptianShoulderPad</td>
@@ -2143,11 +2143,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>ScarfYellow</td>
@@ -2218,11 +2218,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Stubble</td>
@@ -2237,11 +2237,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>PencilStashYellow</td>
@@ -2375,11 +2375,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>HarambeHeartTattoo</td>
@@ -2401,11 +2401,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Cigar</td>
@@ -2420,11 +2420,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>GlassesRoundYellow</td>
@@ -2586,11 +2586,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Cyborg</td>
@@ -2605,11 +2605,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>ArmorOrnateSilverGold</td>
@@ -2631,11 +2631,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>PauldronOrnateSilverGold</td>
@@ -2656,18 +2656,19 @@
 
 
 
+
 					<div style="display: inline-block; text-align: left;">
 						<h2> AlgorillaArmy </h2>
 
-							<button type='button' class='collapsible'>Background</button>
+<button type='button' class='collapsible'>Background</button>
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Brown and Gold Radial</td>
@@ -2787,11 +2788,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Blue Lava</td>
@@ -2904,11 +2905,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Gold</td>
@@ -2979,11 +2980,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Silver</td>
@@ -3061,11 +3062,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Arm down</td>
@@ -3101,11 +3102,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Orange Spacesuit</td>
@@ -3295,11 +3296,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Gold Crown</td>
@@ -3531,11 +3532,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Plunger</td>
@@ -3655,11 +3656,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Yellow Lasers</td>
@@ -3763,18 +3764,20 @@
 </div>
 
 
+
+
 					<div style="display: inline-block; text-align: left;">
 							<h2> Metacadets </h2>
 
-							<button type='button' class='collapsible'>Skin</button>
+<button type='button' class='collapsible'>Skin</button>
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>hologram</td>
@@ -3929,11 +3932,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>glowing yellow</td>
@@ -4081,11 +4084,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>bejeweled</td>
@@ -4142,11 +4145,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>magma</td>
@@ -4252,11 +4255,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>hood</td>
@@ -4320,11 +4323,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>gold + black aviator goggles</td>
@@ -4367,11 +4370,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>gold jacket</td>
@@ -4421,11 +4424,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>gold astronaut backpack</td>
@@ -4475,11 +4478,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>gold moon boots</td>
@@ -4557,11 +4560,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>pantheon</td>
@@ -4596,17 +4599,18 @@
 
 
 
+
 					<div style="display: inline-block; text-align: left;">
 							<h2> Metaengineers </h2>
-								<button type='button' class='collapsible'>Skin</button>
+<button type='button' class='collapsible'>Skin</button>
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>purple</td>
@@ -4747,11 +4751,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>copper</td>
@@ -4885,11 +4889,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>gold</td>
@@ -4988,11 +4992,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>jade</td>
@@ -5049,11 +5053,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Headband - orange </td>
@@ -5152,11 +5156,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>3D Glasses - gold frame, red/blue lens</td>
@@ -5290,11 +5294,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Lunar Oversuit - gold body, white trim</td>
@@ -5456,11 +5460,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Manipulators - acid yellow glow</td>
@@ -5503,11 +5507,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Lunar Overshoes - black base, gold tread</td>
@@ -5648,11 +5652,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>hooting</td>
@@ -5681,11 +5685,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Torch - black </td>
@@ -5777,11 +5781,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Wristband - orange </td>
@@ -5838,11 +5842,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Asteroid walk</td>
@@ -5892,11 +5896,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>Standing</td>
@@ -5918,11 +5922,11 @@
 <div class='content'>
 <table>
 <tr>
-<td></td>
-<td>Average Sale Price</td>
-<td>ATH Sale</td>
-<td>Number of Sales</td>
-<td>Trait Occurrence</td>
+<th></th>
+<th>Average Sale Price</th>
+<th>ATH Sale</th>
+<th>Number of Sales</th>
+<th>Trait Occurrence</th>
 </tr>
 <tr>
 <td>none</td>
@@ -5947,6 +5951,7 @@
 </tr>
 </table>
 </div>
+
 
 
 					</div>
