Updates website with data from 2022-05-25

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 <header>
 <h2>Algorillas NFT Sales Statistics</h2>
 </header>
-<p>Sales data generated for free by the amazing team at <a href="https://www.nftexplorer.app/">nftexplorer</a>. <br>Analysis of sales data done by 
-<a href="https://twitter.com/thecryptomie">thecryptomie</a>.
-<br> Last updated on May 25, 2022  at 15:21:10 PST.</p></section>
+<p>Sales data is pulled directly from the blockchain using the <a href="https://algoexplorer.io/">Algoexplorer API</a>.
+<br> Last updated on May 25, 2022  at 15:49:04 PST.</p></section>
 
 <section id="sales-vol" class="two">
 <div class="container">
