Updates website with data from 2022-06-06

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 <h2>Algorillas NFT Sales Statistics</h2>
 </header>
 <p>Sales data is pulled directly from the blockchain using the <a href="https://algoexplorer.io/">Algoexplorer API</a>.
-<br> Last updated on Jun 04, 2022  at 11:32:23 PST.</p></section>
+<br> Last updated on Jun 06, 2022  at 08:22:47 PST.</p></section>
 
 <section id="sales-vol" class="two">
 <div class="container">
 <header>
-<h2>Algorillas Total Sales Volume: 779,630.38 ALGO</h2>
+<h2>Algorillas Total Sales Volume: 778,492.76 ALGO</h2>
 </header>
 <div style="display: inline-block; text-align: left;">
 <h3>AlgoPrimateElites (A.P.Es)</h3>
@@ -48,7 +48,7 @@
 <li>Collection size: 555</li>
 <li>First Secondary Sale: Mar 04, 2022, 1000.0 ALGO</li>
 <li>Last Secondary Sale: Jun 04, 2022, 575.0 ALGO</li>
-<li>Total volume: 336,744.69 ALGO</li>
+<li>Total volume: 335,607.06 ALGO</li>
 </ul><h3>Algorilla Army</h3>
 <ul>
 <li>Collection size: 1000</li>
@@ -234,8 +234,8 @@
 <tr>
 <td>57 < Rank &le; 112</td>
 <td>10% < Rank Percentile &le; 20%</td>
-<td>671.17 ALGO</td>
-<td>36</td>
+<td>674.09 ALGO</td>
+<td>35</td>
 </tr>
 <tr>
 <td>112 < Rank &le; 168</td>
@@ -246,7 +246,7 @@
 <tr>
 <td>168 < Rank &le; 223</td>
 <td>30% < Rank Percentile &le; 40%</td>
-<td>518.65 ALGO</td>
+<td>510.98 ALGO</td>
 <td>38</td>
 </tr>
 <tr>
@@ -462,9 +462,9 @@
 </tr>
 <tr>
 <td>OliveDrab</td>
-<td>580.3 ALGO</td>
+<td>572.5 ALGO</td>
 <td>945.0 ALGO</td>
-<td>23</td>
+<td>22</td>
 <td>6.3%</td>
 </tr>
 <tr>
@@ -476,9 +476,9 @@
 </tr>
 <tr>
 <td>DullBlue</td>
-<td>516.0 ALGO</td>
+<td>514.9 ALGO</td>
 <td>1000.0 ALGO</td>
-<td>48</td>
+<td>47</td>
 <td>13.0%</td>
 </tr>
 <tr>
@@ -511,9 +511,9 @@
 </tr>
 <tr>
 <td>Grey</td>
-<td>484.5 ALGO</td>
+<td>484.0 ALGO</td>
 <td>1300.0 ALGO</td>
-<td>54</td>
+<td>55</td>
 <td>13.0%</td>
 </tr>
 <tr>
@@ -599,13 +599,6 @@
 <td>5.7%</td>
 </tr>
 <tr>
-<td>White</td>
-<td>604.1 ALGO</td>
-<td>2000.0 ALGO</td>
-<td>23</td>
-<td>7.1%</td>
-</tr>
-<tr>
 <td>TigerWhite</td>
 <td>604.0 ALGO</td>
 <td>769.0 ALGO</td>
@@ -618,6 +611,13 @@
 <td>1000.0 ALGO</td>
 <td>11</td>
 <td>3.7%</td>
+</tr>
+<tr>
+<td>White</td>
+<td>591.5 ALGO</td>
+<td>2000.0 ALGO</td>
+<td>23</td>
+<td>7.1%</td>
 </tr>
 <tr>
 <td>Grey</td>
@@ -698,9 +698,9 @@
 </tr>
 <tr>
 <td>Brown</td>
-<td>452.3 ALGO</td>
+<td>441.7 ALGO</td>
 <td>999.0 ALGO</td>
-<td>12</td>
+<td>11</td>
 <td>2.4%</td>
 </tr>
 <tr>
@@ -738,9 +738,9 @@
 </tr>
 <tr>
 <td>Light</td>
-<td>530.8 ALGO</td>
+<td>528.5 ALGO</td>
 <td>1395.0 ALGO</td>
-<td>149</td>
+<td>148</td>
 <td>47.0%</td>
 </tr>
 <tr>
@@ -785,7 +785,7 @@
 </tr>
 <tr>
 <td>Green</td>
-<td>554.8 ALGO</td>
+<td>552.9 ALGO</td>
 <td>1450.0 ALGO</td>
 <td>58</td>
 <td>17.5%</td>
@@ -820,9 +820,9 @@
 </tr>
 <tr>
 <td>Orange</td>
-<td>485.1 ALGO</td>
+<td>476.2 ALGO</td>
 <td>850.0 ALGO</td>
-<td>31</td>
+<td>30</td>
 <td>11.1%</td>
 </tr>
 </table>
@@ -1146,13 +1146,6 @@
 <td>2.8%</td>
 </tr>
 <tr>
-<td>HatHeadphonesWhite</td>
-<td>537.7 ALGO</td>
-<td>999.0 ALGO</td>
-<td>12</td>
-<td>4.2%</td>
-</tr>
-<tr>
 <td>HairBowlOrange</td>
 <td>531.2 ALGO</td>
 <td>700.0 ALGO</td>
@@ -1172,6 +1165,13 @@
 <td>999.0 ALGO</td>
 <td>18</td>
 <td>3.5%</td>
+</tr>
+<tr>
+<td>HatHeadphonesWhite</td>
+<td>518.4 ALGO</td>
+<td>999.0 ALGO</td>
+<td>11</td>
+<td>4.2%</td>
 </tr>
 <tr>
 <td>HatUshankaWhite</td>
@@ -1266,9 +1266,9 @@
 </tr>
 <tr>
 <td>HatBaseballRed</td>
-<td>439.8 ALGO</td>
+<td>440.9 ALGO</td>
 <td>750.0 ALGO</td>
-<td>15</td>
+<td>16</td>
 <td>5.6%</td>
 </tr>
 <tr>
@@ -1410,11 +1410,11 @@
 <td>0.3%</td>
 </tr>
 <tr>
-<td>PoloFancyBlue</td>
+<td>ShirtTieWhiteBlack</td>
 <td>750.0 ALGO</td>
 <td>750.0 ALGO</td>
 <td>1</td>
-<td>0.6%</td>
+<td>0.9%</td>
 </tr>
 <tr>
 <td>ShirtButtonUpYellow</td>
@@ -1422,13 +1422,6 @@
 <td>750.0 ALGO</td>
 <td>1</td>
 <td>0.3%</td>
-</tr>
-<tr>
-<td>ShirtTieWhiteBlack</td>
-<td>750.0 ALGO</td>
-<td>750.0 ALGO</td>
-<td>1</td>
-<td>0.9%</td>
 </tr>
 <tr>
 <td>ShirtApeGoldCircle</td>
@@ -1620,13 +1613,6 @@
 <td>1.4%</td>
 </tr>
 <tr>
-<td>SweatshirtBlack</td>
-<td>508.8 ALGO</td>
-<td>793.0 ALGO</td>
-<td>8</td>
-<td>4.3%</td>
-</tr>
-<tr>
 <td>SweatshirtBrown</td>
 <td>508.2 ALGO</td>
 <td>669.0 ALGO</td>
@@ -1639,6 +1625,13 @@
 <td>555.0 ALGO</td>
 <td>2</td>
 <td>0.9%</td>
+</tr>
+<tr>
+<td>SweatshirtBlack</td>
+<td>500.2 ALGO</td>
+<td>793.0 ALGO</td>
+<td>7</td>
+<td>4.3%</td>
 </tr>
 <tr>
 <td>TurtleneckBlue</td>
@@ -1709,6 +1702,13 @@
 <td>676.0 ALGO</td>
 <td>8</td>
 <td>3.5%</td>
+</tr>
+<tr>
+<td>ShirtTieWhiteRed</td>
+<td>458.4 ALGO</td>
+<td>458.4 ALGO</td>
+<td>1</td>
+<td>0.9%</td>
 </tr>
 <tr>
 <td>ShirtAthleticRed</td>
@@ -1898,25 +1898,11 @@
 <td>0.8%</td>
 </tr>
 <tr>
-<td>BusinessCoatRed</td>
-<td>606.5 ALGO</td>
-<td>999.0 ALGO</td>
-<td>13</td>
-<td>5.7%</td>
-</tr>
-<tr>
 <td>WinterCoatWhite</td>
 <td>603.5 ALGO</td>
 <td>769.0 ALGO</td>
 <td>4</td>
 <td>4.5%</td>
-</tr>
-<tr>
-<td>WinterCoatOrange</td>
-<td>600.0 ALGO</td>
-<td>600.0 ALGO</td>
-<td>2</td>
-<td>2.9%</td>
 </tr>
 <tr>
 <td>OrnateCoatBrown</td>
@@ -1926,11 +1912,18 @@
 <td>0.8%</td>
 </tr>
 <tr>
-<td>OpenBlazerOrange</td>
-<td>569.0 ALGO</td>
-<td>569.0 ALGO</td>
-<td>1</td>
-<td>0.4%</td>
+<td>WinterCoatOrange</td>
+<td>600.0 ALGO</td>
+<td>600.0 ALGO</td>
+<td>2</td>
+<td>2.9%</td>
+</tr>
+<tr>
+<td>BusinessCoatRed</td>
+<td>594.5 ALGO</td>
+<td>999.0 ALGO</td>
+<td>12</td>
+<td>5.8%</td>
 </tr>
 <tr>
 <td>OrnateCoatRed</td>
@@ -1993,14 +1986,14 @@
 <td>495.5 ALGO</td>
 <td>850.0 ALGO</td>
 <td>8</td>
-<td>6.1%</td>
+<td>6.2%</td>
 </tr>
 <tr>
 <td>FlannelCoatBlue</td>
 <td>483.0 ALGO</td>
 <td>700.0 ALGO</td>
 <td>3</td>
-<td>2.0%</td>
+<td>2.1%</td>
 </tr>
 <tr>
 <td>PaddedCoatGreen</td>
@@ -2028,7 +2021,7 @@
 <td>456.5 ALGO</td>
 <td>805.0 ALGO</td>
 <td>12</td>
-<td>6.1%</td>
+<td>6.2%</td>
 </tr>
 <tr>
 <td>FurCoatRed</td>
@@ -2063,7 +2056,7 @@
 <td>445.0 ALGO</td>
 <td>530.0 ALGO</td>
 <td>4</td>
-<td>2.0%</td>
+<td>2.1%</td>
 </tr>
 <tr>
 <td>FurCoatYellow</td>
@@ -2077,7 +2070,7 @@
 <td>422.5 ALGO</td>
 <td>550.0 ALGO</td>
 <td>2</td>
-<td>2.0%</td>
+<td>2.1%</td>
 </tr>
 <tr>
 <td>BananaCoat</td>
@@ -2142,9 +2135,9 @@
 </tr>
 <tr>
 <td>AlgoNecklaceSilver</td>
-<td>543.1 ALGO</td>
+<td>530.8 ALGO</td>
 <td>777.0 ALGO</td>
-<td>21</td>
+<td>19</td>
 <td>31.1%</td>
 </tr>
 <tr>
@@ -2249,13 +2242,6 @@
 <td>1.3%</td>
 </tr>
 <tr>
-<td>GoateeWhite</td>
-<td>777.0 ALGO</td>
-<td>777.0 ALGO</td>
-<td>1</td>
-<td>2.2%</td>
-</tr>
-<tr>
 <td>PencilStashBlack</td>
 <td>750.0 ALGO</td>
 <td>750.0 ALGO</td>
@@ -2289,6 +2275,13 @@
 <td>945.0 ALGO</td>
 <td>6</td>
 <td>1.8%</td>
+</tr>
+<tr>
+<td>GoateeWhite</td>
+<td>617.7 ALGO</td>
+<td>777.0 ALGO</td>
+<td>2</td>
+<td>2.2%</td>
 </tr>
 <tr>
 <td>MoustacheWhite</td>
@@ -2327,9 +2320,9 @@
 </tr>
 <tr>
 <td>Stubble</td>
-<td>516.4 ALGO</td>
+<td>513.9 ALGO</td>
 <td>1500.0 ALGO</td>
-<td>94</td>
+<td>93</td>
 <td>73.7%</td>
 </tr>
 <tr>
@@ -2395,7 +2388,7 @@
 </tr>
 <tr>
 <td>ChestHair</td>
-<td>555.3 ALGO</td>
+<td>553.8 ALGO</td>
 <td>1069.0 ALGO</td>
 <td>72</td>
 <td>70.7%</td>
@@ -2524,9 +2517,9 @@
 </tr>
 <tr>
 <td>GlassesRoundBlack</td>
-<td>504.1 ALGO</td>
+<td>499.0 ALGO</td>
 <td>945.0 ALGO</td>
-<td>8</td>
+<td>9</td>
 <td>4.7%</td>
 </tr>
 <tr>
