Updates website with data from 2022-06-06

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 <h2>Algorillas NFT Sales Statistics</h2>
 </header>
 <p>Sales data is pulled directly from the blockchain using the <a href="https://algoexplorer.io/">Algoexplorer API</a>.
-<br> Last updated on Jun 06, 2022  at 08:22:47 PST.</p></section>
+<br> Last updated on Jun 06, 2022  at 08:29:14 PST.</p></section>
 
 <section id="sales-vol" class="two">
 <div class="container">
 <header>
-<h2>Algorillas Total Sales Volume: 778,492.76 ALGO</h2>
+<h2>Algorillas Total Sales Volume: 780,005.76 ALGO</h2>
 </header>
 <div style="display: inline-block; text-align: left;">
 <h3>AlgoPrimateElites (A.P.Es)</h3>
@@ -48,13 +48,13 @@
 <li>Collection size: 555</li>
 <li>First Secondary Sale: Mar 04, 2022, 1000.0 ALGO</li>
 <li>Last Secondary Sale: Jun 04, 2022, 575.0 ALGO</li>
-<li>Total volume: 335,607.06 ALGO</li>
+<li>Total volume: 337,480.06 ALGO</li>
 </ul><h3>Algorilla Army</h3>
 <ul>
 <li>Collection size: 1000</li>
 <li>First Secondary Sale: Oct 20, 2021, 125.0 ALGO</li>
 <li>Last Secondary Sale: Jun 02, 2022, 259.0 ALGO</li>
-<li>Total volume: 133,590.58 ALGO</li>
+<li>Total volume: 133,230.58 ALGO</li>
 </ul><h3>Metacadets</h3>
 <ul>
 <li>Collection size: 118</li>
@@ -234,8 +234,8 @@
 <tr>
 <td>57 < Rank &le; 112</td>
 <td>10% < Rank Percentile &le; 20%</td>
-<td>674.09 ALGO</td>
-<td>35</td>
+<td>671.17 ALGO</td>
+<td>36</td>
 </tr>
 <tr>
 <td>112 < Rank &le; 168</td>
@@ -246,8 +246,8 @@
 <tr>
 <td>168 < Rank &le; 223</td>
 <td>30% < Rank Percentile &le; 40%</td>
-<td>510.98 ALGO</td>
-<td>38</td>
+<td>517.11 ALGO</td>
+<td>39</td>
 </tr>
 <tr>
 <td>223 < Rank &le; 278</td>
@@ -308,8 +308,8 @@
 <tr>
 <td>501 < Rank</td>
 <td>50% < Rank Percentile </td>
-<td>191.57 ALGO</td>
-<td>225</td>
+<td>191.68 ALGO</td>
+<td>223</td>
 </tr>
 </table>
 <h2>Metacadets</h2>
@@ -462,9 +462,9 @@
 </tr>
 <tr>
 <td>OliveDrab</td>
-<td>572.5 ALGO</td>
+<td>580.3 ALGO</td>
 <td>945.0 ALGO</td>
-<td>22</td>
+<td>23</td>
 <td>6.3%</td>
 </tr>
 <tr>
@@ -476,9 +476,9 @@
 </tr>
 <tr>
 <td>DullBlue</td>
-<td>514.9 ALGO</td>
+<td>516.0 ALGO</td>
 <td>1000.0 ALGO</td>
-<td>47</td>
+<td>48</td>
 <td>13.0%</td>
 </tr>
 <tr>
@@ -606,18 +606,18 @@
 <td>2.9%</td>
 </tr>
 <tr>
+<td>White</td>
+<td>598.1 ALGO</td>
+<td>2000.0 ALGO</td>
+<td>24</td>
+<td>7.1%</td>
+</tr>
+<tr>
 <td>Normal</td>
 <td>595.0 ALGO</td>
 <td>1000.0 ALGO</td>
 <td>11</td>
 <td>3.7%</td>
-</tr>
-<tr>
-<td>White</td>
-<td>591.5 ALGO</td>
-<td>2000.0 ALGO</td>
-<td>23</td>
-<td>7.1%</td>
 </tr>
 <tr>
 <td>Grey</td>
@@ -698,9 +698,9 @@
 </tr>
 <tr>
 <td>Brown</td>
-<td>441.7 ALGO</td>
+<td>452.3 ALGO</td>
 <td>999.0 ALGO</td>
-<td>11</td>
+<td>12</td>
 <td>2.4%</td>
 </tr>
 <tr>
@@ -738,9 +738,9 @@
 </tr>
 <tr>
 <td>Light</td>
-<td>528.5 ALGO</td>
+<td>530.3 ALGO</td>
 <td>1395.0 ALGO</td>
-<td>148</td>
+<td>150</td>
 <td>47.0%</td>
 </tr>
 <tr>
@@ -785,9 +785,9 @@
 </tr>
 <tr>
 <td>Green</td>
-<td>552.9 ALGO</td>
+<td>553.2 ALGO</td>
 <td>1450.0 ALGO</td>
-<td>58</td>
+<td>59</td>
 <td>17.5%</td>
 </tr>
 <tr>
@@ -820,9 +820,9 @@
 </tr>
 <tr>
 <td>Orange</td>
-<td>476.2 ALGO</td>
+<td>485.1 ALGO</td>
 <td>850.0 ALGO</td>
-<td>30</td>
+<td>31</td>
 <td>11.1%</td>
 </tr>
 </table>
@@ -1146,6 +1146,13 @@
 <td>2.8%</td>
 </tr>
 <tr>
+<td>HatHeadphonesWhite</td>
+<td>537.7 ALGO</td>
+<td>999.0 ALGO</td>
+<td>12</td>
+<td>4.2%</td>
+</tr>
+<tr>
 <td>HairBowlOrange</td>
 <td>531.2 ALGO</td>
 <td>700.0 ALGO</td>
@@ -1165,13 +1172,6 @@
 <td>999.0 ALGO</td>
 <td>18</td>
 <td>3.5%</td>
-</tr>
-<tr>
-<td>HatHeadphonesWhite</td>
-<td>518.4 ALGO</td>
-<td>999.0 ALGO</td>
-<td>11</td>
-<td>4.2%</td>
 </tr>
 <tr>
 <td>HatUshankaWhite</td>
@@ -1386,7 +1386,7 @@
 <td>1111.0 ALGO</td>
 <td>1111.0 ALGO</td>
 <td>1</td>
-<td>1.2%</td>
+<td>1.1%</td>
 </tr>
 <tr>
 <td>TankTopGreen</td>
@@ -1417,6 +1417,13 @@
 <td>0.9%</td>
 </tr>
 <tr>
+<td>PoloFancyBlue</td>
+<td>750.0 ALGO</td>
+<td>750.0 ALGO</td>
+<td>1</td>
+<td>0.6%</td>
+</tr>
+<tr>
 <td>ShirtButtonUpYellow</td>
 <td>750.0 ALGO</td>
 <td>750.0 ALGO</td>
@@ -1428,7 +1435,7 @@
 <td>747.7 ALGO</td>
 <td>1300.0 ALGO</td>
 <td>3</td>
-<td>1.2%</td>
+<td>1.1%</td>
 </tr>
 <tr>
 <td>TankTopRed</td>
@@ -1533,7 +1540,7 @@
 <td>554.5 ALGO</td>
 <td>680.0 ALGO</td>
 <td>2</td>
-<td>1.2%</td>
+<td>1.1%</td>
 </tr>
 <tr>
 <td>ShirtTiePinkGreen</td>
@@ -1554,14 +1561,14 @@
 <td>537.6 ALGO</td>
 <td>1500.0 ALGO</td>
 <td>14</td>
-<td>7.8%</td>
+<td>7.7%</td>
 </tr>
 <tr>
 <td>PoloBlue</td>
 <td>537.0 ALGO</td>
 <td>750.0 ALGO</td>
 <td>4</td>
-<td>1.2%</td>
+<td>1.1%</td>
 </tr>
 <tr>
 <td>TankTopWhite</td>
@@ -1613,6 +1620,13 @@
 <td>1.4%</td>
 </tr>
 <tr>
+<td>SweatshirtBlack</td>
+<td>508.8 ALGO</td>
+<td>793.0 ALGO</td>
+<td>8</td>
+<td>4.3%</td>
+</tr>
+<tr>
 <td>SweatshirtBrown</td>
 <td>508.2 ALGO</td>
 <td>669.0 ALGO</td>
@@ -1627,13 +1641,6 @@
 <td>0.9%</td>
 </tr>
 <tr>
-<td>SweatshirtBlack</td>
-<td>500.2 ALGO</td>
-<td>793.0 ALGO</td>
-<td>7</td>
-<td>4.3%</td>
-</tr>
-<tr>
 <td>TurtleneckBlue</td>
 <td>500.0 ALGO</td>
 <td>600.0 ALGO</td>
@@ -1645,7 +1652,7 @@
 <td>500.0 ALGO</td>
 <td>600.0 ALGO</td>
 <td>2</td>
-<td>1.2%</td>
+<td>1.1%</td>
 </tr>
 <tr>
 <td>PoloFancyBlack</td>
@@ -1701,7 +1708,7 @@
 <td>462.4 ALGO</td>
 <td>676.0 ALGO</td>
 <td>8</td>
-<td>3.5%</td>
+<td>3.4%</td>
 </tr>
 <tr>
 <td>ShirtTieWhiteRed</td>
@@ -1729,7 +1736,7 @@
 <td>437.8 ALGO</td>
 <td>725.0 ALGO</td>
 <td>8</td>
-<td>1.2%</td>
+<td>1.1%</td>
 </tr>
 <tr>
 <td>PoloFancyRed</td>
@@ -1898,18 +1905,18 @@
 <td>0.8%</td>
 </tr>
 <tr>
+<td>BusinessCoatRed</td>
+<td>606.5 ALGO</td>
+<td>999.0 ALGO</td>
+<td>13</td>
+<td>5.7%</td>
+</tr>
+<tr>
 <td>WinterCoatWhite</td>
 <td>603.5 ALGO</td>
 <td>769.0 ALGO</td>
 <td>4</td>
 <td>4.5%</td>
-</tr>
-<tr>
-<td>OrnateCoatBrown</td>
-<td>600.0 ALGO</td>
-<td>600.0 ALGO</td>
-<td>1</td>
-<td>0.8%</td>
 </tr>
 <tr>
 <td>WinterCoatOrange</td>
@@ -1919,11 +1926,18 @@
 <td>2.9%</td>
 </tr>
 <tr>
-<td>BusinessCoatRed</td>
-<td>594.5 ALGO</td>
-<td>999.0 ALGO</td>
-<td>12</td>
-<td>5.8%</td>
+<td>OrnateCoatBrown</td>
+<td>600.0 ALGO</td>
+<td>600.0 ALGO</td>
+<td>1</td>
+<td>0.8%</td>
+</tr>
+<tr>
+<td>OpenBlazerOrange</td>
+<td>569.0 ALGO</td>
+<td>569.0 ALGO</td>
+<td>1</td>
+<td>0.4%</td>
 </tr>
 <tr>
 <td>OrnateCoatRed</td>
@@ -1986,14 +2000,14 @@
 <td>495.5 ALGO</td>
 <td>850.0 ALGO</td>
 <td>8</td>
-<td>6.2%</td>
+<td>6.1%</td>
 </tr>
 <tr>
 <td>FlannelCoatBlue</td>
 <td>483.0 ALGO</td>
 <td>700.0 ALGO</td>
 <td>3</td>
-<td>2.1%</td>
+<td>2.0%</td>
 </tr>
 <tr>
 <td>PaddedCoatGreen</td>
@@ -2021,7 +2035,7 @@
 <td>456.5 ALGO</td>
 <td>805.0 ALGO</td>
 <td>12</td>
-<td>6.2%</td>
+<td>6.1%</td>
 </tr>
 <tr>
 <td>FurCoatRed</td>
@@ -2056,7 +2070,7 @@
 <td>445.0 ALGO</td>
 <td>530.0 ALGO</td>
 <td>4</td>
-<td>2.1%</td>
+<td>2.0%</td>
 </tr>
 <tr>
 <td>FurCoatYellow</td>
@@ -2070,7 +2084,7 @@
 <td>422.5 ALGO</td>
 <td>550.0 ALGO</td>
 <td>2</td>
-<td>2.1%</td>
+<td>2.0%</td>
 </tr>
 <tr>
 <td>BananaCoat</td>
@@ -2135,9 +2149,9 @@
 </tr>
 <tr>
 <td>AlgoNecklaceSilver</td>
-<td>530.8 ALGO</td>
+<td>543.1 ALGO</td>
 <td>777.0 ALGO</td>
-<td>19</td>
+<td>21</td>
 <td>31.1%</td>
 </tr>
 <tr>
@@ -2320,9 +2334,9 @@
 </tr>
 <tr>
 <td>Stubble</td>
-<td>513.9 ALGO</td>
+<td>516.4 ALGO</td>
 <td>1500.0 ALGO</td>
-<td>93</td>
+<td>94</td>
 <td>73.7%</td>
 </tr>
 <tr>
@@ -2388,9 +2402,9 @@
 </tr>
 <tr>
 <td>ChestHair</td>
-<td>553.8 ALGO</td>
+<td>554.0 ALGO</td>
 <td>1069.0 ALGO</td>
-<td>72</td>
+<td>73</td>
 <td>70.7%</td>
 </tr>
 </table>
@@ -2706,9 +2720,9 @@
 </tr>
 <tr>
 <td>Grey and Silver Radial</td>
-<td>234.2 ALGO</td>
+<td>237.0 ALGO</td>
 <td>990.0 ALGO</td>
-<td>41</td>
+<td>39</td>
 <td>5.8%</td>
 </tr>
 <tr>
@@ -2865,9 +2879,9 @@
 </tr>
 <tr>
 <td>Normal</td>
-<td>210.5 ALGO</td>
+<td>210.8 ALGO</td>
 <td>1200.0 ALGO</td>
-<td>174</td>
+<td>172</td>
 <td>38.6%</td>
 </tr>
 <tr>
@@ -2912,9 +2926,9 @@
 </tr>
 <tr>
 <td>Blue</td>
-<td>284.2 ALGO</td>
+<td>289.5 ALGO</td>
 <td>2690.0 ALGO</td>
-<td>41</td>
+<td>39</td>
 <td>11.5%</td>
 </tr>
 <tr>
@@ -3036,9 +3050,9 @@
 </tr>
 <tr>
 <td>Bloodshot</td>
-<td>202.0 ALGO</td>
+<td>203.6 ALGO</td>
 <td>500.0 ALGO</td>
-<td>30</td>
+<td>28</td>
 <td>6.0%</td>
 </tr>
 <tr>
@@ -3083,9 +3097,9 @@
 </tr>
 <tr>
 <td>Arm down, smiling</td>
-<td>208.0 ALGO</td>
+<td>208.4 ALGO</td>
 <td>1451.0 ALGO</td>
-<td>135</td>
+<td>133</td>
 <td>25.1%</td>
 </tr>
 </table>
@@ -3213,18 +3227,18 @@
 <td>3.6%</td>
 </tr>
 <tr>
+<td>Purple Hawaiian Shirt</td>
+<td>202.8 ALGO</td>
+<td>295.0 ALGO</td>
+<td>13</td>
+<td>4.7%</td>
+</tr>
+<tr>
 <td>Green Vneck</td>
 <td>201.2 ALGO</td>
 <td>300.0 ALGO</td>
 <td>8</td>
 <td>2.5%</td>
-</tr>
-<tr>
-<td>Purple Hawaiian Shirt</td>
-<td>199.8 ALGO</td>
-<td>295.0 ALGO</td>
-<td>15</td>
-<td>4.7%</td>
 </tr>
 <tr>
 <td>Black Sports Bra</td>
@@ -3492,9 +3506,9 @@
 </tr>
 <tr>
 <td>White Fishing Hat</td>
-<td>171.6 ALGO</td>
+<td>170.2 ALGO</td>
 <td>350.0 ALGO</td>
-<td>14</td>
+<td>12</td>
 <td>5.1%</td>
 </tr>
 <tr>
@@ -3726,9 +3740,9 @@
 </tr>
 <tr>
 <td>Morpheus Glasses</td>
-<td>207.7 ALGO</td>
+<td>210.2 ALGO</td>
 <td>500.0 ALGO</td>
-<td>24</td>
+<td>22</td>
 <td>9.1%</td>
 </tr>
 <tr>
